--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,9 @@ jobs:
         id: vars
         run: echo ::set-output name=tag::$(echo ${GITHUB_REF:10})
         
+      - name: Update const string BepinEx version field
+        run: sed -i 's/"0.0.1"/"${{steps.vars.outputs.tag}}"/g' ExtendedCompiler/build/ExtendedCompiler.targets
+        
       - name: Build and Create the package
         run:
           dotnet pack -c Release ExtendedCompiler/ExtendedCompiler.csproj
