--- a/ExtendedCompiler/ExtendedCompiler.csproj
+++ b/ExtendedCompiler/ExtendedCompiler.csproj
@@ -31,7 +31,7 @@
   </ItemGroup>
 
   <Target Name="PostBuild" AfterTargets="PostBuildEvent">
-    <Exec Command="mkdir $(ProjectDir)content\ExtendedCompilerBinary\" Condition=" '$(OS)' != 'Windows_NT' " />
+    <Exec Command="mkdir -p $(ProjectDir)content\ExtendedCompilerBinary\" Condition=" '$(OS)' != 'Windows_NT' " />
     <Exec Command="cp -r $(TargetDir) $(ProjectDir)content\ExtendedCompilerBinary\" Condition=" '$(OS)' != 'Windows_NT' " />
     <Exec Command="xcopy /Y $(TargetDir) $(ProjectDir)content\ExtendedCompilerBinary\" Condition=" '$(OS)' == 'Windows_NT' " />
   </Target>
