--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,6 +10,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-dotnet@v1
+      - uses: warrenbuckley/Setup-MSBuild@v1
         
       - name: Get the Release version tag
         id: vars
