--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,13 +23,13 @@ jobs:
         run:
           msbuild -p:Configuration=Release ExtendedCompiler/ExtendedCompiler.csproj
           -p:Version=${{steps.vars.outputs.tag}}
-          -o .
+          /p:OutputPath=.
           
       - name: Build
         run:
           msbuild -t:pack /p:Configuration=Release ExtendedCompiler/ExtendedCompiler.csproj
           -p:Version=${{steps.vars.outputs.tag}}
-          -o ./content/
+          /p:OutputPath=./content/
           
       - name: Put the content folder in nupkg
         run: zip -r *.nupkg ./content/
