--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,6 +8,7 @@ jobs:
   publish:
     runs-on: windows-latest
     steps:
+      - shell: bash
       - uses: actions/checkout@v2
       - uses: actions/setup-dotnet@v1
       - uses: microsoft/setup-msbuild@v1.0.2
