--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,6 +7,9 @@ on:
 jobs:
   publish:
     runs-on: windows-latest
+    defaults:
+      run:
+        shell: bash
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-dotnet@v1
@@ -24,13 +27,11 @@ jobs:
         run: sed -i 's/0.0.1/${{steps.vars.outputs.tag}}/g' ExtendedCompiler/build/ExtendedCompiler.targets
           
       - name: Build
-      - shell: bash
         run:
           msbuild -p:Configuration=Release ExtendedCompiler.sln
           -p:Version=${{steps.vars.outputs.tag}} -p:OutputPath=.
           
       - name: Pack
-      - shell: bash
         run:
           msbuild -t:pack /p:Configuration=Release ExtendedCompiler.sln
           -p:Version=${{steps.vars.outputs.tag}} -p:OutputPath=./content/
