--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,13 +29,13 @@ jobs:
       - name: Build
         run: |
           dir=$(pwd)
-          cd "C:\Program Files (x86)\Microsoft Visual Studio\2019\\Enterprise\MSBuild\Current\Bin\MSBuild.exe"
+          cd "C:\Program Files (x86)\Microsoft Visual Studio\2019\\Enterprise\MSBuild\Current\Bin"
           ./MSBuild.exe -p:Configuration=Release "$dir"\ExtendedCompiler.sln -p:Version=${{steps.vars.outputs.tag}} -p:OutputPath="$dir"
           
       - name: Pack
         run: |
           dir=$(pwd)
-          cd "C:\Program Files (x86)\Microsoft Visual Studio\2019\\Enterprise\MSBuild\Current\Bin\MSBuild.exe"
+          cd "C:\Program Files (x86)\Microsoft Visual Studio\2019\\Enterprise\MSBuild\Current\Bin"
           ./MSBuild.exe -t:pack -p:Configuration=Release "$dir"\ExtendedCompiler.sln -p:Version=${{steps.vars.outputs.tag}} -p:OutputPath="$dir"
           
       - name: Put the content folder in nupkg
