--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,14 +29,14 @@ jobs:
       - name: Build
         run: |
           dir=$(pwd)
-          cd "C:\Program Files (x86)\Microsoft Visual Studio\2019\\Enterprise\MSBuild\Current\Bin"
-          ./MSBuild.exe -p:Configuration=Release "$dir"\ExtendedCompiler.sln -p:Version=${{steps.vars.outputs.tag}} -p:OutputPath="$dir"
+          cd "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\MSBuild\Current\Bin"
+          ./MSBuild.exe -p:Configuration=Release "$dir"/ExtendedCompiler.sln -p:Version=${{steps.vars.outputs.tag}} -p:OutputPath="$dir"
           
       - name: Pack
         run: |
           dir=$(pwd)
-          cd "C:\Program Files (x86)\Microsoft Visual Studio\2019\\Enterprise\MSBuild\Current\Bin"
-          ./MSBuild.exe -t:pack -p:Configuration=Release "$dir"\ExtendedCompiler.sln -p:Version=${{steps.vars.outputs.tag}} -p:OutputPath="$dir"
+          cd "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\MSBuild\Current\Bin"
+          ./MSBuild.exe -t:pack -p:Configuration=Release "$dir"/ExtendedCompiler.sln -p:Version=${{steps.vars.outputs.tag}} -p:OutputPath="$dir"
           
       - name: Put the content folder in nupkg
         run: zip -r *.nupkg ./content/
