Update pipeline.yml for Azure Pipelines

--- a/.azure/pipeline.yml
+++ b/.azure/pipeline.yml
@@ -84,13 +84,13 @@ steps:
     arguments: '--configuration $(buildConfiguration) "/p:Configuration=$(buildConfiguration)"'
 
 # Create and "publish" main artifacts.
-- template: 'azure-pipelines-postbuild.yml'
+- template: '.azure/pipelines/postbuild.yml'
   parameters:
     targetFramework: 'net35'
-- template: 'azure-pipelines-postbuild.yml'
+- template: '.azure/pipelines/postbuild.yml'
   parameters:
     targetFramework: 'net40'
-- template: 'azure-pipelines-postbuild.yml'
+- template: '.azure/pipelines/postbuild.yml'
   parameters:
     targetFramework: 'netstandard2.0'
 
@@ -118,13 +118,6 @@ steps:
   inputs:
     command: push
     packagesToPush: '$(Build.ArtifactStagingDirectory)/nupkgs/*.nupkg'
-- task: PowerShell@2
-  condition: and(always(), ne(variables['Build.Reason'], 'PullRequest'), eq(variables.pushNuGet, 'true'))
-  displayName: 'Artifacts: Prepare: ExtendedCompiler to nuget.org'
-  continueOnError: true
-  inputs:
-    filePath: 'azure-pipelines-prepushcommon.ps1'
-    arguments: '$(Build.ArtifactStagingDirectory)/nupkgs/ExtendedCompiler.*.nupkg'
 - task: NuGetCommand@2
   condition: and(always(), ne(variables['Build.Reason'], 'PullRequest'), eq(variables.pushNuGet, 'true'))
   displayName: 'Artifacts: Push: ExtendedCompiler to nuget.org'
