Update pipeline.yml for Azure Pipelines

--- a/.azure/pipeline.yml
+++ b/.azure/pipeline.yml
@@ -84,13 +84,13 @@ steps:
     arguments: '--configuration $(buildConfiguration) "/p:Configuration=$(buildConfiguration)"'
 
 # Create and "publish" main artifacts.
-- template: '.azure/pipelines/postbuild.yml'
+- template: 'postbuild.yml'
   parameters:
     targetFramework: 'net35'
-- template: '.azure/pipelines/postbuild.yml'
+- template: 'postbuild.yml'
   parameters:
     targetFramework: 'net40'
-- template: '.azure/pipelines/postbuild.yml'
+- template: 'postbuild.yml'
   parameters:
     targetFramework: 'netstandard2.0'
 
