Update pipeline.yml for Azure Pipelines

--- a/.azure/pipeline.yml
+++ b/.azure/pipeline.yml
@@ -125,4 +125,4 @@ steps:
     command: 'push'
     packagesToPush: '$(Build.ArtifactStagingDirectory)/nupkgs/ExtendedCompiler.*.nupkg'
     nuGetFeedType: 'external'
-    publishFeedCredentials: 'NuGet.org'
+    publishFeedCredentials: 'Nuget auth'
