--- a/ExtendedCompiler/ExtendedCompiler.csproj
+++ b/ExtendedCompiler/ExtendedCompiler.csproj
@@ -5,7 +5,7 @@
 	  <Description>A post build weaver that enhance the C# experience</Description>
 	  <Authors>QuentinE</Authors>
 	  <Version>0.0.1</Version>
-    <TargetFrameworks>netstandard2.0;net35;net40;net5.0</TargetFrameworks>
+    <TargetFrameworks>;net35;net40;netstandard2.0</TargetFrameworks>
 	  <LangVersion>preview</LangVersion>
 	  <OutputType>Exe</OutputType>
 	  <PackageProjectUrl>https://github.com/xiaoxiao921/ExtendedCompiler</PackageProjectUrl>
