--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -52,7 +52,9 @@ jobs:
           -o .
           
       - name: Put the content folder in nupkg
-        run: zip -r *.nupkg ./content/
+      - uses: montudor/action-zip@v0.1.1
+        with:
+          args: zip -r *.nupkg ./content/
         
       - name: Publish the package to Nuget
         run: dotnet nuget push "*.nupkg" -k ${{secrets.NUGET_KEY}} -s https://api.nuget.org/v3/index.json
