--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,11 +51,8 @@ jobs:
           -p:Version=${{steps.vars.outputs.tag}}
           -o .
           
-      - name: Install zip
-        uses: montudor/action-zip@v0.1.1
-          
       - name: Put the content folder in nupkg
-        run: zip -r *.nupkg ./content/
+        run: 7z a *.nupkg ./content/ -r
         
       - name: Publish the package to Nuget
         run: dotnet nuget push "*.nupkg" -k ${{secrets.NUGET_KEY}} -s https://api.nuget.org/v3/index.json
